src/main/webapp/resources/css/theme_opentheso.css
/* ... */
@-webkit-keyframes noise-anim-2 {
    0% {
        clip: rect(16px, 9999px, 10px, 0);
    }
    5% {
        clip: rect(22px, 9999px, 29px, 0);
    }
    10% {
        clip: rect(6px, 9999px, 68px, 0);
    }
    15% {
        clip: rect(85px, 9999px, 95px, 0);
    }
    20% {
        clip: rect(65px, 9999px, 91px, 0);
    }
    25% {
        clip: rect(93px, 9999px, 68px, 0);
    }
    30% {
        clip: rect(10px, 9999px, 27px, 0);
    }
    35% {
        clip: rect(37px, 9999px, 25px, 0);
    }
    40% {
        clip: rect(12px, 9999px, 23px, 0);
    }
    45% {
        clip: rect(40px, 9999px, 18px, 0);
    }
    50% {
        clip: rect(19px, 9999px, 71px, 0);
    }
    55% {
        clip: rect(2px, 9999px, 35px, 0);
    }
    60% {
        clip: rect(16px, 9999px, 69px, 0);
    }
    65% {
        clip: rect(8px, 9999px, 65px, 0);
    }
    70% {
        clip: rect(30px, 9999px, 57px, 0);
    }
    75% {
        clip: rect(14px, 9999px, 4px, 0);
    }
    80% {
        clip: rect(39px, 9999px, 30px, 0);
    }
    85% {
        clip: rect(22px, 9999px, 35px, 0);
    }
    90% {
        clip: rect(58px, 9999px, 71px, 0);
    }
    95% {
        clip: rect(34px, 9999px, 90px, 0);
    }
    100% {
        clip: rect(67px, 9999px, 68px, 0);
    }
}

@keyframes noise-anim-2 {
    0% {
        clip: rect(16px, 9999px, 10px, 0);
    }
    5% {
        clip: rect(22px, 9999px, 29px, 0);
    }
    10% {
        clip: rect(6px, 9999px, 68px, 0);
    }
    15% {
        clip: rect(85px, 9999px, 95px, 0);
    }
    20% {
        clip: rect(65px, 9999px, 91px, 0);
    }
    25% {
        clip: rect(93px, 9999px, 68px, 0);
    }
    30% {
        clip: rect(10px, 9999px, 27px, 0);
    }
    35% {
        clip: rect(37px, 9999px, 25px, 0);
    }
    40% {
        clip: rect(12px, 9999px, 23px, 0);
    }
    45% {
        clip: rect(40px, 9999px, 18px, 0);
    }
    50% {
        clip: rect(19px, 9999px, 71px, 0);
    }
    55% {
        clip: rect(2px, 9999px, 35px, 0);
    }
    60% {
        clip: rect(16px, 9999px, 69px, 0);
    }
    65% {
        clip: rect(8px, 9999px, 65px, 0);
    }
    70% {
        clip: rect(30px, 9999px, 57px, 0);
    }
    75% {
        clip: rect(14px, 9999px, 4px, 0);
    }
    80% {
        clip: rect(39px, 9999px, 30px, 0);
    }
    85% {
        clip: rect(22px, 9999px, 35px, 0);
    }
    90% {
        clip: rect(58px, 9999px, 71px, 0);
    }
    95% {
        clip: rect(34px, 9999px, 90px, 0);
    }
    100% {
        clip: rect(67px, 9999px, 68px, 0);
    }
}

.error:before {
    content: attr(data-text);
    position: absolute;
    left: -2px;
    text-shadow: 1px 0 #4e73df;
    top: 0;
    color: #5a5c69;
    background: #f8f9fc;
    overflow: hidden;
    clip: rect(0, 900px, 0, 0);
    animation: noise-anim-2 3s infinite linear alternate-reverse;
}

footer.sticky-footer {
    padding: 2rem 0;
    flex-shrink: 0;
    font-size: 12px;
}

footer.sticky-footer .copyright {
    line-height: 1;
    font-size: 12px;
}

body.sidebar-toggled footer.sticky-footer {
    width: 100%;
}

/*pour l'arbre*/
.pi_custom_open {
    color: #F47B2A !important;
    font-size: 0.8rem !important;
}
.pi_custom_collapse {
    color: #F47B2A !important;
    font-size: 0.8rem !important;    
}
.pi_custom_file {
    color: #143a1e !important;
    font-size: 0.8rem !important;     
}
.fa_custom_magnet {
    color: #C63632 !important;
    font-size: 0.8rem !important;
}
.fa_custom_ban {
    color: #C63632 !important;
    font-size: 0.8rem !important;    
}


/*Tree Groups */
.fa_custom_open {
    color: #143a1e  !important;
    font-size: 0.8rem !important;    
}
.fa_custom_collapse {
    color:  #143a1e !important;
    font-size: 0.8rem !important;    
}
.fa_custom_file{
    color: #164A78 !important;
    font-size: 0.8rem !important;    
}

